--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "mongoose": "^8.16.3",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "redis": "^5.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
