--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "mongoose": "^8.16.3",
     "nodemailer": "^7.0.5",
-    "redis": "^5.6.0"
+    "redis": "^5.6.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
