--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,15 @@
 services:
   client:
     build: ./client
-    ports:
-      - "3000:3000"
+    image: newmri/nyanspace-client:latest
     environment:
-      - CHOKIDAR_USEPOLLING=true
-      - WATCHPACK_POLLING=true
       - TZ=Asia/Seoul
-    volumes:
-      - ./client:/app
-      - /app/node_modules
     depends_on:
       - server
 
   server:
     build: ./server
-    ports:
-      - "5000:5000"
-    volumes:
-      - ./server:/app
-      - /app/node_modules
+    image: newmri/nyanspace-server:latest
     environment:
       - MONGO_URI=mongodb://mongo:27017/nyanspace
       - REDIS_URI=redis://default:${REDIS_PASSWORD}@redis:6379
@@ -27,9 +17,7 @@ services:
     depends_on:
       - mongo
       - redis
-    command: ["npx", "nodemon", "--legacy-watch", "index.js"]
-    env_file:
-      - server/.env
+
   mongo:
     image: mongo:8
     container_name: mongo
@@ -47,8 +35,6 @@ services:
     ports:
       - "6379:6379"
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
-    env_file:
-      - server/.env
     volumes:
       - redis-data:/data
       - /etc/localtime:/etc/localtime:ro
