--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^7.2.0",
     "@toolpad/core": "^0.16.0",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3",
